# dofus_api

./: .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  test.ipynb
.github/workflows/: tests.yml
data/: dofusdb.consommables.json  dofusdb.montures.json  dofusdb.ressources.json  equipements.json  init-mongo.sh  metiers.json  monstres.json  runes.csv
src/: app.py  main.py  utils.py
src/DAO/: Connect.py  DB.py  ObjectDAO.py  connect.py  filldb.py  object_dao.py  ressources_dao.py
src/Entity/: ClasseEntity.py  GameEntity.py  RessourceEntity.py
src/Object/: ConsommableObject.py  EntityObject.py  EquipementObject.py  MetierObject.py  MonstreObject.py  MontureObject.py  RessourceObject.py  metier_object.py  monstre_object.py
src/Scraper/: ConsommableScraper.py  EntityScraper.py  EquipementScraper.py  MetierScraper.py  MonstreScraper.py  MontureScraper.py  RessourceScraper.py  consommable_scraper.py  metier_scrap.py  metier_scraper.py
src/Utils/: metiers_utils.py  utils.py
src/dao/: DB.py  config.py  connect.py  object_dao.py
src/links/: all_ressources.txt  consommables_links.txt  link_montures.txt  metiers_links.txt  missing_ressources.txt  monstres_link.txt  pb_links.txt  ressources_links.txt  temp_links.txt
src/object/: consommable_object.py  entity_object.py  equipement_object.py  metier_object.py  monstre_object.py  monture_object.py  ressource_object.py
src/scraper/: consommable_scraper.py  entity_scraper.py  equipement_scraper.py  metier_scraper.py  monstre_scraper.py  monture_scraper.py  (+1 more)
(+2 files in other folders)
