[tool.poetry]
name = "dofus-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
dnspython = "2.6.1"
idna = "3.6"
pymongo = "4.6.2"
python-dotenv = "1.0.1"
requests = "2.31.0"
soupsieve = "2.5"
urllib3 = "2.2.1"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
